--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
    color: #020c12;
 }
 
-/* @keyframes slide-in {
+
+@keyframes slide-in {
    from {
       margin-right: 100%;
       width: 300%;
@@ -18,10 +19,10 @@ body {
       margin-left: 0%;
       width: 100%;
    }
-} */
+}
 
 h1 {
-   font-size: 4rem;
+   font-size: 2.8rem;
    text-align: center;
    color: #168b47;
    margin-bottom: 0;
@@ -30,22 +31,22 @@ h1 {
 }
 
 h2 {
-   font-size: 3rem;
+   font-size: 2.3rem;
    text-align: center;
    color: #168b47;
 }
 
 p {
-   font-size: 1rem;
+   font-size: .9rem;
 }
 
 h3 {
-   font-size: 2rem;
+   font-size: 1.8rem;
    color: #168b47;
 }
 
 h4 {
-   font-size: 1.7rem;
+   font-size: 1.5rem;
    color: #0798e7;
    text-align: center;
 }
@@ -55,28 +56,35 @@ h4 {
    padding: 1rem;
    display: flex;
    align-items: center;
+   min-width: 100px;
 }
 
 .navbar > img {
-   width: 7rem;
+   width: 5rem;
 }
 
 .logo-text {
    font-weight: bold;
    color: #eee;
-   font-size: 1.7rem;
+   font-size: 1.5rem;
    padding-left: 1rem;
 }
 
 .slogan {
    margin: 0;
-   font-size: 2rem;
+   font-size: 1.2rem;
    text-align: center;
    font-style: italic;
    color: grey;
    font-weight: 300;
 
    animation: slide-in 1.5s;
+}
+
+.main-container {
+   margin: 0 1rem;
+   flex: 1;
+   justify-content: center;
 }
 
 .mv,
@@ -86,7 +94,7 @@ h4 {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
-   gap: 1.5rem;
+   gap: 1rem;
 }
 
 .who-we-are {
@@ -99,12 +107,12 @@ h4 {
 .vision,
 .values {
    flex: 1;
-   min-width: 500px;
+   min-width: 200px;
    text-align: center;
 }
 
 .hwe-logo {
-   width: 25rem;
+   width: 15rem;
    height: auto;
    display: block;
    margin: 0 auto;
@@ -113,11 +121,11 @@ h4 {
 .values-list {
    justify-content: center;
    list-style: none;
-   gap: 1.5rem;
+   gap: 1rem;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
-   font-size: 1.5rem;
+   font-size: 1rem;
 }
 
 .steam,
@@ -133,33 +141,38 @@ h4 {
    flex-direction: row;
    justify-content: center;
    gap: 1rem;
-   margin-bottom: 1.5rem;
+   margin-bottom: 1rem;
 }
 
 .steam-cards,
-.char {
+.char, .canvas-card-mini, .canvas-card {
    background-color: #ddd;
-   padding: 0 1rem;
+   padding: 1rem;
    border-radius: 1rem;
    flex: 1;
-   min-width: 250px;
+   min-width: 100px;
+   text-align: justify;
 }
+
+.subtitle {
+   font-size: 1.5rem;
+   color: #0798e7;
+   text-align: center;
+   margin: 0;
+   font-weight: 600;
+}
+
 
 .char > h4 {
    color: #0c4467;
 }
 
-.canvas-top, .canvas-bottom{
- display: flex;
- flex-wrap: wrap;
- gap: 1rem;
- margin-bottom: 1rem;
-}
-
-.canvas-card, .canvas-card-mini {
-   background-color: #ddd;
-   min-width: 300px;
-   padding: 1rem;
+.canvas-top,
+.canvas-bottom {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 1rem;
+   margin-bottom: 1rem;
 }
 
 .canvas-card-mini {
@@ -196,4 +209,21 @@ h4 {
 
 .col-7 > h4 {
    color: #b29400;
+}
+
+.footer {
+ background-color: #168b47;
+   padding: 1rem;
+   display: flex;
+   align-items: center;
+   min-width: 100px;
+   justify-content: center;  
+}
+
+
+.footer-text {
+   font-size: .7rem;
+   color: white;
+   font-weight: 500;
+   text-align: center;
 }
