--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
    color: #020c12;
 }
 
-
 @keyframes slide-in {
    from {
       margin-right: 100%;
@@ -22,7 +21,7 @@ body {
 }
 
 h1 {
-   font-size: 2.8rem;
+   font-size: 2.5rem;
    text-align: center;
    color: #168b47;
    margin-bottom: 0;
@@ -31,22 +30,22 @@ h1 {
 }
 
 h2 {
-   font-size: 2.3rem;
+   font-size: 2rem;
    text-align: center;
    color: #168b47;
 }
 
 p {
-   font-size: .9rem;
+   font-size: 0.8rem;
 }
 
 h3 {
-   font-size: 1.8rem;
+   font-size: 1.5rem;
    color: #168b47;
 }
 
 h4 {
-   font-size: 1.5rem;
+   font-size: 1.1rem;
    color: #0798e7;
    text-align: center;
 }
@@ -82,14 +81,13 @@ h4 {
 }
 
 .main-container {
-   margin: 0 1rem;
    flex: 1;
    justify-content: center;
 }
 
 .mv,
 .who-we-are {
-   margin: 1rem 1.5rem;
+   margin: 1rem 1rem;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
@@ -125,13 +123,17 @@ h4 {
    padding: 0;
    display: flex;
    flex-wrap: wrap;
-   font-size: 1rem;
+   font-size: 0.8rem;
 }
 
 .steam,
 .foda,
 .canvas {
-   margin: 1rem 1.5rem;
+   margin: 1rem 1rem;
+}
+
+.steam-text {
+   text-align: justify;
 }
 
 .steam-cards-container,
@@ -145,30 +147,31 @@ h4 {
 }
 
 .steam-cards,
-.char, .canvas-card-mini, .canvas-card {
+.char,
+.canvas-card-mini,
+.canvas-card {
    background-color: #ddd;
    padding: 1rem;
    border-radius: 1rem;
    flex: 1;
-   min-width: 100px;
-   text-align: justify;
+   min-width: 125px;
+   text-align: center;
 }
 
 .subtitle {
-   font-size: 1.5rem;
+   font-size: 1rem;
    color: #0798e7;
    text-align: center;
    margin: 0;
    font-weight: 600;
 }
 
-
 .char > h4 {
    color: #0c4467;
+   font-size: 1.2rem;
 }
 
-.canvas-top,
-.canvas-bottom {
+.canvas-top {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
@@ -212,17 +215,16 @@ h4 {
 }
 
 .footer {
- background-color: #168b47;
+   background-color: #168b47;
    padding: 1rem;
    display: flex;
    align-items: center;
    min-width: 100px;
-   justify-content: center;  
+   justify-content: center;
 }
 
-
 .footer-text {
-   font-size: .7rem;
+   font-size: 0.7rem;
    color: white;
    font-weight: 500;
    text-align: center;
